android: Implement DumpWithoutCrashing() from child processes

Bug: 911834
Change-Id: I1901745a79f40748791d5c9a0dee1f45fb7ca88a
Reviewed-on: https://chromium-review.googlesource.com/c/1362189
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Joshua Peraza <jperaza@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614427}
Former-commit-id: 6b424b920a9170a35eb79ffb283078f4598f6716